# agent-line

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: agent_loop.rs  agent_workflow_simple.rs  assistant.rs  coder.rs  hello_world.rs  multi_model.rs  newsletter.rs  otel_tracing.rs  parallel.rs
examples/incident_investigation/: data.rs  main.rs  state.rs
examples/incident_investigation/agents/: correlate_timeline.rs  find_anomalies.rs  investigation_report.rs  load_evidence.rs  mod.rs  triage_narrative.rs
src/: agent.rs  ctx.rs  lib.rs  llm.rs  runner.rs  workflow.rs
src/tools/: command.rs  file.rs  http.rs  mod.rs  parse.rs
