[package]
name = "agent-line"
version = "0.1.2"
edition = "2024"
description = "A batteries-included Rust library for building agent workflows"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bradleyd/agent-line"
repository = "https://github.com/bradleyd/agent-line"
keywords = ["agent", "workflow", "llm", "pipeline"]
categories = ["development-tools"]

[dependencies]
ureq = { version = "3.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["trace"] }
opentelemetry-stdout = { version = "0.31", features = ["trace"] }
